# oncodatasets-py

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  datasets.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: examples.md  index.md
examples/: basic_usage.py  index.html
oncodatasets/: __init__.py  core.py  datasets.py
oncodatasets/data/: bladder_cancer_mice.csv  bladder_cancer_recurrence.csv  breast_cancer_brca1.csv  breast_cancer_brca2.csv  breast_cancer_diagnostic.csv  breast_cancer_german.csv  breast_cancer_nki70.csv  breast_cancer_prognosis.csv  breast_cancer_qol.csv  breast_cancer_sphase.csv  breast_lymph_node.csv  cancer_canada_mortality.csv  cancer_incidence_us_age.csv  cervical_cancer_mortality.csv  cervical_cancer_patients.csv  colon_chemotherapy.csv  colorectal_cancer_msa.csv  colorectal_cancer_staging.csv  dlbcl_gene_expression.csv  esophageal_cancer.csv  gastric_cancer.csv  glioma_radioimmunotherapy.csv  head_neck_cancer_qol.csv  leukemia_bone_marrow.csv  leukemia_wbc.csv  lip_cancer_scotland.csv  liver_cancer_aflatoxin.csv  liver_cancer_mice.csv  lung_cancer_danish_rates.csv  lung_cancer_va.csv  lymphoma_dogs.csv  mammary_cancer_rats.csv  melanoma_mortality_us_males.csv  myeloma_gene_expression.csv  ovarian_cancer.csv  ovarian_cancer_brca2.csv  ovarian_cancer_qol.csv  ovarian_carcinoma_stage.csv  pancreatic_cancer_ca19.csv  pancreatic_cancer_incidence.csv  (+10 more)
search/: search_index.json
tests/: test_core.py  test_datasets.py
