[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncodatasets"
version = "0.1.0"
description = "A curated collection of oncological, clinical trial, and cancer survival datasets for data analysis, statistical modeling, and machine learning research. Includes breast cancer diagnostics, lung and bladder cancer survival analysis, tumor gene expression profiles, dose-response carcinogen experiments in laboratory animals, patient-reported quality of life (QoL) metrics, epidemiological incidence and mortality rates, and clinical trial outcomes from curated R packages on CRAN."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Renzo Caceres Rossi", email = "arenzocaceresrossi@gmail.com" }
]
maintainers = [
    { name = "Renzo Caceres Rossi", email = "arenzocaceresrossi@gmail.com" }
]
requires-python = ">=3.8"
keywords = [
    "oncology",
    "cancer research",
    "datasets",
    "survival analysis",
    "clinical trials",
    "breast cancer",
    "lung cancer",
    "leukemia",
    "biomedical data",
    "epidemiology",
    "biostatistics",
    "tumor genetics",
    "gene expression",
    "carcinogenesis",
    "dose-response",
    "experimental design",
    "prognostic factors",
    "data science",
    "statistics",
    "research",
    "open science",
    "open data",
    "medical statistics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
dependencies = [
    "pandas>=1.5,<3.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/lightbluetitan/oncodatasets-py/issues"
"Documentation" = "https://github.com/lightbluetitan/oncodatasets-py"
"Source Code" = "https://github.com/lightbluetitan/oncodatasets-py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]