[metadata]
name = oncodatasets
version = 0.1.0
author = Renzo Caceres Rossi
author_email = arenzocaceresrossi@gmail.com
description = A curated collection of oncological, clinical trial, and cancer survival datasets for data analysis, statistical modeling, and machine learning research. Includes breast cancer diagnostics, lung and bladder cancer survival analysis, tumor gene expression profiles, dose-response carcinogen experiments in laboratory animals, patient-reported quality of life (QoL) metrics, epidemiological incidence and mortality rates, and clinical trial outcomes from curated R packages on CRAN.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lightbluetitan/oncodatasets-py
project_urls =
    Bug Tracker = https://github.com/lightbluetitan/oncodatasets-py/issues
    Documentation = https://github.com/lightbluetitan/oncodatasets-py
    Source Code = https://github.com/lightbluetitan/oncodatasets-py
license = GNU General Public License v3 or later (GPLv3+)
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Natural Language :: English
keywords = oncology, cancer research, datasets, survival analysis, clinical trials, breast cancer, lung cancer, leukemia, biomedical data, epidemiology, biostatistics, tumor genetics, gene expression, carcinogenesis, dose-response, experimental design, prognostic factors, data science, statistics, research, open science, open data, medical statistics
[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5,<3.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.package_data]
oncodatasets = data/*.csv

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    black
    flake8
    mypy
docs =
    mkdocs
    mkdocs-material

# Configuration for pytest
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --cov=oncodatasets
    --cov-report=html
    --cov-report=term

# Configuration for coverage
[coverage:run]
source = oncodatasets
omit =
    */tests/*
    */test_*.py
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

# Configuration for flake8
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    env,
    venv

# Configuration for mypy
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False